--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dynamic-form": "^0.0.1",
+    "react-native-vector-icons": "^6.6.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
